<resources>
    <string name="app_name">MoviesCatalog</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="film_time">%s мин.</string>
    <string name="age_limit">%d+</string>
    <string name="money">$%d</string>
    <string name="tagline_ui">«%s»</string>
    <string name="min_login_length_error">Логин содержит не менее %d символов.</string>
    <string name="min_first_name_length_error">Имя содержит не менее %d символов.</string>
    <string name="min_password_length_error">Пароль содержит не менее %d символов</string>
    <string name="url_error">Некорректная ссылка</string>
    <string name="no_account">Еще нет аккаунта?</string>
    <string name="cinema_world">Погрузись в мир кино</string>
    <string name="enjoy_movies_on_mobile">Мы предлагаем удобный и легкий способ насладиться любимыми фильмами прямо с Вашего мобильного устройства.</string>
    <string name="registration">Регистрация</string>
    <string name="register">Зарегистрируйтесь</string>
    <string name="register_finally">Зарегистрироваться</string>
    <string name="login_to">Войти</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="entrance">Вход</string>
    <string name="filmus">FИЛЬМУС</string>
    <string name="first_name">Имя</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="gender">Пол</string>
    <string name="email">Электронная почта</string>
    <string name="birthday">Дата рождения</string>
    <string name="continue_registration">Продолжить</string>
    <string name="have_account">Уже есть аккаунт?</string>
    <string name="sign_in">Войдите</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="email_error">Некорректный адрес электронной почты</string>
    <string name="password_error">Некорректный пароль.</string>
    <string name="repeated_password_error">Пароли не совпадают.</string>
    <string name="login_failed">Неверный логин или пароль.</string>
    <string name="registration_error">Такой пользователь уже существует.</string>
    <string name="main">Главная</string>
    <string name="favorite">Любимое</string>
    <string name="profile">Профиль</string>
    <string name="catalog">Каталог</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="avatar_link">Ссылка на аватар</string>
    <string name="cancel">Отменить</string>
    <string name="apply">Сохранить</string>
    <string name="no_favorite_movies">У вас пока нет любимых фильмов</string>
    <string name="add_to_favorites">Выберите понравившийся фильм в каталоге и добавьте его в любимые</string>
    <string name="test_rating">9.0</string>
    <string name="movie_title">Название фильма</string>
    <string name="genres">Жанры</string>
    <string name="about_film">О фильме</string>
    <string name="year">Год</string>
    <string name="empty">-</string>
    <string name="country">Страна</string>
    <string name="tagline">Слоган</string>
    <string name="director">Режиссёр</string>
    <string name="budget">Бюджет</string>
    <string name="collection">Сборы в мире</string>
    <string name="age">Возраст</string>
    <string name="duration">Время</string>
    <string name="reviews">Отзывы</string>
    <string name="my_review">мой отзыв</string>
    <string name="test_number">10</string>
    <string name="review_text">Текст отзыва</string>
    <string name="test_date">07.10.2023</string>
    <string name="test_date_with_country">2013 · США</string>
    <string name="leave_review">Оставить отзыв</string>
    <string name="write_review">Напишите отзыв</string>
    <string name="anonymous">Анонимный отзыв</string>
    <string name="anonymous_user">Анонимный пользователь</string>
    <string name="save">Сохранить</string>
    <string name="cancellation">Отмена</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="more">Подробнее</string>
    <string name="hide">Скрыть</string>
</resources>