<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_16"
    tools:context=".presentation.feature_user_auth.auth_selection.AuthSelectionFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/auth_selection_image_height"
        android:src="@drawable/auth_selection_image" />

    <TextView
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:text="@string/cinema_world"
        android:textAlignment="center" />

    <TextView
        style="@style/BodyTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/enjoy_movies_on_mobile"
        android:textAlignment="center" />

    <Button
        android:id="@+id/registration"
        style="@style/AccentButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_32"
        android:text="@string/registration" />

    <Button
        android:id="@+id/loginTo"
        style="@style/AuthSelectionLoginButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/login_to" />
</LinearLayout>