<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/average_rating"
        style="@style/AverageRatingStyleTitle"
        android:background="@drawable/average_rating_background"
        android:gravity="center"
        android:text="@string/test_rating"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title" />


    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="@dimen/favorite_button_size"
        android:layout_height="@dimen/favorite_button_size"
        android:background="@drawable/favorite_button_selector"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title" />

    <TextView
        android:id="@+id/title"
        style="@style/TitleTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:text="@string/movie_title"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_24"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@id/toggleButton"
        app:layout_constraintStart_toEndOf="@id/average_rating"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BodyTextStyle"
        android:textSize="@dimen/text_size_14"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/genres_title"
        style="@style/DescriptionHeaderStyle"
        android:text="@string/genres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/genres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        app:flow_horizontalBias="0"
        app:flow_horizontalGap="@dimen/margin_8"
        app:flow_horizontalStyle="packed"
        app:flow_verticalGap="@dimen/margin_8"
        app:flow_verticalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genres_title"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <TextView
        android:id="@+id/about_film"
        style="@style/DescriptionHeaderStyle"
        android:text="@string/about_film"
        app:layout_constraintTop_toTopOf="@+id/genres"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/description_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_108" />
    
    <TextView
        android:id="@+id/year"
        style="@style/DescriptionSubHeaderStyle"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/year"
        app:layout_constraintTop_toBottomOf="@+id/about_film"/>
    
    <TextView
        android:id="@+id/year_description"
        style="@style/DescriptionStyle"
        android:text="@string/empty"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/description_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/year" />

    <TextView
        android:id="@+id/country"
        style="@style/DescriptionSubHeaderStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year_description"
        android:text="@string/country"/>

    <TextView
        android:id="@+id/country_description"
        style="@style/DescriptionStyle"
        android:text="@string/empty"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/description_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/country" />

    <TextView
        android:id="@+id/tagline"
        style="@style/DescriptionSubHeaderStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country_description"
        android:text="@string/tagline"/>

    <TextView
        android:id="@+id/tagline_description"
        style="@style/DescriptionStyle"
        android:text="@string/empty"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/description_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/tagline" />

    <TextView
        android:id="@+id/director"
        style="@style/DescriptionSubHeaderStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tagline_description"
        android:text="@string/director"/>

    <TextView
        android:id="@+id/director_description"
        style="@style/DescriptionStyle"
        android:text="@string/empty"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/description_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/director" />

    <TextView
        android:id="@+id/budget"
        style="@style/DescriptionSubHeaderStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/director_description"
        android:text="@string/budget"/>

    <TextView
        android:id="@+id/budget_description"
        style="@style/DescriptionStyle"
        android:text="@string/empty"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/description_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/budget" />

    <TextView
        android:id="@+id/collection"
        style="@style/DescriptionSubHeaderStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/budget_description"
        android:text="@string/collection"/>

    <TextView
        android:id="@+id/collection_description"
        style="@style/DescriptionStyle"
        android:text="@string/empty"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/description_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/collection" />

    <TextView
        android:id="@+id/age"
        style="@style/DescriptionSubHeaderStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/collection_description"
        android:text="@string/age"/>

    <TextView
        android:id="@+id/age_description"
        style="@style/DescriptionStyle"
        android:text="@string/empty"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/description_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/age" />

    <TextView
        android:id="@+id/duration"
        style="@style/DescriptionSubHeaderStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age_description"
        android:text="@string/duration"/>

    <TextView
        android:id="@+id/duration_description"
        style="@style/DescriptionStyle"
        android:text="@string/empty"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/description_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/duration" />

    <TextView
        android:id="@+id/reviews"
        style="@style/DescriptionHeaderStyle"
        android:text="@string/reviews"
        app:layout_constraintTop_toBottomOf="@id/duration_description"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>