<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16"
    tools:context=".presentation.registration_details.RegistrationDetailsFragment">

    <TextView
        android:id="@+id/label"
        style="@style/label_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filmus"
        android:textColor="@color/accent_color"
        android:textSize="@dimen/text_size_17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/backspace_icon_size"
        android:layout_height="@dimen/backspace_icon_size"
        android:adjustViewBounds="true"
        android:src="@drawable/backspace_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registration"
        style="@style/title_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label" />

    <TextView
        android:id="@+id/first_name"
        style="@style/hint_text_style"
        android:text="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:theme="@style/text_layout_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/body_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/gender"
        style="@style/hint_text_style"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name_edit_text" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/genderToggleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender"
        app:singleSelection="true">

        <Button
            android:id="@+id/maleButton"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male" />

        <Button
            android:id="@+id/femaleButton"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/login"
        style="@style/hint_text_style"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genderToggleGroup" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:theme="@style/text_layout_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/body_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/email"
        style="@style/hint_text_style"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_edit_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:theme="@style/text_layout_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/body_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/birthday"
        style="@style/hint_text_style"
        android:text="@string/birthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthday_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:theme="@style/text_layout_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/calendar_icon"
        app:endIconTint="@color/gray_400"
        >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/body_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continue_registration"
        style="@style/accent_button_style"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/continue_registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthday_edit_text" />


    <TextView
        android:id="@+id/no_account"
        style="@style/sub_title_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        android:textSize="@dimen/text_size_14"
        android:textColor="@color/gray_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/register"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/register"
        style="@style/sub_title_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_14"
        android:layout_marginStart="@dimen/space"
        android:text="@string/sign_in"
        android:textColor="@color/accent_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/no_account" />
</androidx.constraintlayout.widget.ConstraintLayout>