<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_20">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/review_image_size"
        android:layout_height="@dimen/review_image_size"
        android:scaleType="centerCrop"
        android:src="@drawable/anonymous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Circular" />

    <TextView
        android:id="@+id/login"
        style="@style/SubTitleTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/my_review"
        app:layout_constraintEnd_toStartOf="@id/user_rating"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image" />

    <TextView
        android:id="@+id/my_review"
        style="@style/BodyTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10"
        android:text="@string/my_review"
        android:textColor="@color/gray_400"
        android:textSize="@dimen/text_size_13"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintTop_toBottomOf="@id/login" />

    <TextView
        android:id="@+id/user_rating"
        style="@style/UserTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginEnd="@dimen/margin_10"
        android:background="@drawable/user_rating"
        android:drawablePadding="@dimen/padding_6"
        android:padding="@dimen/padding_4"
        android:text="@string/test_number"
        app:drawableStartCompat="@drawable/star_icon"
        app:layout_constraintEnd_toStartOf="@id/edit_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginEnd="0dp" />

    <ImageView
        android:id="@+id/edit_button"
        android:layout_width="@dimen/edit_button_size"
        android:layout_height="@dimen/edit_button_size"
        android:layout_marginTop="@dimen/margin_7"
        android:src="@drawable/edit_button"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/review_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="login,profile_image,my_review,user_rating,edit_button"/>

    <TextView
        android:id="@+id/review_text"
        style="@style/BodyTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/review_text"
        android:textSize="@dimen/text_size_14"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/review_title" />

    <TextView
        android:id="@+id/date"
        style="@style/SubTitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:textColor="@color/gray_400"
        android:textSize="@dimen/text_size_12"
        android:text="@string/test_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_text" />
</androidx.constraintlayout.widget.ConstraintLayout>